# agent_template

./: .coverage  .env.example  .gitignore  CLAUDE.md  DEBUG.md  MANIFEST.in  README.md  agent.md  config.json  config.json.example  history.json  null  pyproject.toml
data/cache/: state_cache.db
frontend_web/agent-web/: package.json
frontend_web/agent-web/src/: App.tsx
frontend_web/agent-web/src/components/: ChatInterface.tsx  SessionManager.tsx  SystemStats.tsx  TaskMonitor.tsx
frontend_web/agent-web/src/hooks/: useApi.ts  useWebSocket.ts
frontend_web/agent-web/src/services/: api.ts  websocket.ts
frontend_web/agent-web/src/types/: api.ts
scripts/: build-frontend.sh  dev-frontend.sh  dev.sh  setup.sh  start-full-stack.sh
src/agent_template/: __init__.py  cli.py  config.py  server.py
src/agent_template.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/agent_template/api/: __init__.py  routes.py  websocket.py
src/agent_template/core/: agent_loop.py  async_queue.py  stream_gen.py
src/agent_template/frontend/: __init__.py  client.py  terminal_app.py
src/agent_template/models/: messages.py  tasks.py  tools.py
src/agent_template/services/: compressor.py  messages.py  model_provider.py  session_manager.py  state_cache.py  subagent.py  todo_manager.py  tool_manager.py
src/agent_template/utils/: __init__.py  logging_setup.py
src/agentx/: __init__.py  agent.py  cli.py  config.py  errors.py  events.py  http.py  logging.py  session.py
src/agentx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/agentx/providers/: __init__.py  base.py  deepseek.py  openai.py  registry.py
src/agentx/runtime/: listeners.py  sessions.py
src/agentx/tui/: repl.py
tests/: __init__.py  conftest.py  test_agent.py  test_http.py  test_imports.py  test_providers_openai.py  test_tool_manager.py
