[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-template"
version = "0.1.0"
description = "Advanced AI Agent Template with Terminal Frontend and Python Backend"
authors = [{name = "Agent Template", email = "agent@template.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "rich>=13.7.0",
    "textual>=0.45.0",
    "click>=8.1.0",
    "aiofiles>=23.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aioredis>=2.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "openai>=1.6.0",
    "anthropic>=0.8.0",
    "tiktoken>=0.5.0",
    "python-multipart>=0.0.6",
    "structlog>=23.2.0",
    "orjson>=3.9.0",
    "lz4>=4.3.0",
    "xxhash>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
agent-template = "agent_template.cli:cli"
agent-server = "agent_template.server:main"
agent-client = "agent_template.frontend.terminal_app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_template"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=agent_template --cov-report=term-missing"